# bavel

./: .gitignore  CMakeLists.txt  controlSchema.txt  todo.txt
src/: DataLoader.cpp  DirectoryReader.cpp  ElementLogic.cpp  Header.hpp  ListItem.cpp  ProcessingFuncs.cpp  main.cpp
